--- a/pom.xml
+++ b/pom.xml
@@ -46,14 +46,7 @@
     </properties>
 
     <modules>
-        <module>karate-core</module>        
-        <module>karate-junit5</module>
-        <module>karate-test</module>
-        <module>karate-gatling</module>
-        <module>karate-playwright</module>
-        <module>karate-robot</module>        
-        <module>karate-e2e-tests</module>
-        <module>karate-archetype</module>
+        <module>karate-test-one</module>
     </modules>
 
     <build>       
